fix overlapping gif

--- a/css/brutal.css
+++ b/css/brutal.css
@@ -17,7 +17,7 @@
   width: 100%;
   z-index: -1;
   position: absolute;
-  margin-top: 311px;
+  margin-top: 91vw;
 }
 .text-margin {
   margin-top: 56vw;
